traducciones casi listas

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,23 +4,23 @@
 			<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-mail"}) do |f| %>
 			  <% devise_flash %>
 
-				<h1>Sign up</h1>
+				<h1><%= t("sign_up") %></h1>
 				<div class="form-group">
-					<label for="email" class="text-uppercase">Email</label>
-					<%= f.email_field :email, autofocus: true, class: "form-control input-lg", placeholder: "Enter email" %>
+					<label for="email" class="text-uppercase"><%= t('email') %></label>
+					<%= f.email_field :email, autofocus: true, class: "form-control input-lg", placeholder: t("enter")+" "+t("email") %>
 				</div>
 
 				<div class="form-group">
-					<label for="username" class="text-uppercase">Username</label>
-					<input type="text" class="form-control input-lg" id="user_username" name="user[username]" placeholder="Enter Username">
+					<label for="username" class="text-uppercase"><%= t("username") %></label>
+					<input type="text" class="form-control input-lg" id="user_username" name="user[username]" placeholder= <%= t("enter_username") %> >
 				</div>
 
 				<div class="form-group">
-					<label for="location" class="text-uppercase">reception center <span title="prefered package reception center" class="glyphicon glyphicon-info-sign"></span></label>
-					<%= select_tag(:agency, options_for_select(Agency.all.collect {|p| [ p.location, p.id ] }), {prompt: 'Select a Location' , class: "form-control input-lg", id: "user_agency_id", name: "user[agency_id]" })%>
+					<label for="location" class="text-uppercase"><%= t("reception_center") %> <span title="prefered package reception center" class="glyphicon glyphicon-info-sign"></span></label>
+					<%= select_tag(:agency, options_for_select(Agency.all.collect {|p| [ p.location, p.id ] }), {prompt: t('select_a_location') , class: "form-control input-lg", id: "user_agency_id", name: "user[agency_id]" })%>
 				</div>
 				<div class="form-group">
-			 		<%= f.label :password, class: "text-uppercase" %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+			 		<%= f.label :password, class: "text-uppercase" %> <% if @validatable %><i>(<%= @minimum_password_length %> <%= t("characters")+" "+t("minimum") %>)</i><% end %><br />
 			    	<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg" %>
 				</div>
 
@@ -30,7 +30,7 @@
 				</div>
 
 			  	<div class="form-group">
-			  		<%= f.submit "Sign up", class: "no-radius btn btn-green btn-block btn-lg text-uppercase"%>
+			  		<%= f.submit t("sign_up"), class: "no-radius btn btn-green btn-block btn-lg text-uppercase"%>
 			  	</div>
 			<% end %>
 		</div>
