--- a/app/views/package/users/_user.html.erb
+++ b/app/views/package/users/_user.html.erb
@@ -3,20 +3,20 @@
 		<div class="col-xs-12">
 			<ul class="list-unstyled list-inline title-separator">
 				<li class="align-middle"><%= image_tag "open-box.png" , class: "img-responsive img-sm", title: 'Ballicons (free) by Nick Frost is licensed under CC BY 3.0'%></li>
-				<li class="align-middle"><h3 class="no-margin">Packages</h3></li>
+				<li class="align-middle"><h3 class="no-margin text-capitalize"><%= t("packages") %></h3></li>
 			</ul>
 		</div>
 		<div class="col-xs-12 col-md-8">
 			<div class="table-responsive">
 				<table class="table table-hover" id="table-package">
 					<thead>
-						<tr>
+						<tr class="text-capitalize">
 							<th>#</th>
-							<th>Ref. Number</th>
-							<th>Description</th>
-							<th>Role</th>
-							<th>Status</th>
-							<th>Details</th>
+							<th><%= t("ref_number") %></th>
+							<th><%= t("description") %></th>
+							<th><%= t("role") %></th>
+							<th><%= t("status") %></th>
+							<th><%= t("details") %></th>
 						</tr>
 					</thead>
 					<tbody>
@@ -27,7 +27,7 @@
 							<td><%= package.description %></td>
 							<td><%= current_user.package_role(package) %></td>
 							<td class="text-capitalize"><%= package.status_human%></td>
-							<td><%=link_to("View Details", package_path(package))%></td>
+							<td><%=link_to(t("view")+" "+t("details"), package_path(package))%></td>
 						</tr>
 						<% end %>
 					</tbody>
@@ -39,8 +39,8 @@
 		</div>
 		<div class="col-md-offset-1 col-md-3 col-xs-12">
 			<%= form_tag(package_index_path, :method => "get", role: "form", id: "search-form") do %>
-				<div class="input-group form-group">
-					<%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search Packages by Ref. number", id: "search-form" %>
+				<div class="input-group form-group text-capitalize">
+					<%= text_field_tag :search, params[:search], class: "form-control", placeholder: t("search")+" "+ t("packages")+" "+ t("by")+" "+t("ref_number"), id: "search-form" %>
 			        <div class="input-group-btn">
 			            <button class="btn btn-green" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 			        </div>
@@ -48,9 +48,9 @@
 			<% end %>
 	    	<%if !@count.blank?%>
 	    		<%if @count == 0%>
-	    			<p class="text-danger text-center"><%=@count%> Packages found</p>
+	    			<p class="text-danger text-center text-capitalize"><%=@count%> <%= t("packages_found") %></p>
 	    		<%else%>
-	    			<p class="text-success text-center"><%=@count%> Packages found</p>
+	    			<p class="text-success text-center text-capitalize"><%=@count%> <%= t("packages_found") %></p>
 	    		<%end%>
 	    	<%end%>
 		</div>
