--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -7,26 +7,26 @@
 				<h1>Add new operator</h1>
 				<div class="form-group">
 					<label for="email" class="text-uppercase">Email</label>
-					<%= f.email_field :email, autofocus: true, class: "form-control input-lg", placeholder: "Enter email" %>
+					<%= f.email_field :email, autofocus: true, class: "form-control input-lg", placeholder: "Enter email", required: true %>
 				</div>
 
 				<div class="form-group">
 					<label for="username" class="text-uppercase">Username</label>
-					<input type="text" class="form-control input-lg" id="user_username" name="user[username]" placeholder="Enter Username">
+					<%= f.text_field :username, required:true, class: "form-control input-lg", placeholder: t("enter_username")%>
 				</div>
 
 				<div class="form-group">
 					<label for="location" class="text-uppercase">reception center <span title="designated agency for operator" class="glyphicon glyphicon-info-sign"></span></label>
-					<%= select_tag(:agency, options_for_select(Agency.all.collect {|p| [ p.location, p.id ] }), {prompt: 'Select a Location' , class: "form-control input-lg", id: "user_agency_id", name: "user[agency_id]" })%>
+					<%= f.collection_select(:agency_id, Agency.all, :id, :location, {include_blank: 'Select a location'},{class: "form-control input-lg", required: true}) %>
 				</div>
 				<div class="form-group">
 			 		<%= f.label :password, class: "text-uppercase" %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-			    	<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg" %>
+			    	<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg", required: true %>
 				</div>
 
 			  	<div class="form-group">
 			  		<%= f.label :password_confirmation , class: "text-uppercase"%><br />
-			    	<%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg"  %>
+			    	<%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg", required: true  %>
 				</div>
 
 			  	<div class="form-group">
