--- a/app/views/package_mailer/arrived.html.erb
+++ b/app/views/package_mailer/arrived.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Dear <%= @user.username %>,</h1>
+    <h1>Dear <%= @username %>,</h1>
     <p>
-      Your <a href="<%= @url%>" target="_blank">package</a> has successfully reached  its destination to <%= @location %>
+      Your <a href="<%=@url%>">package</a> has successfully reached  its destination to <%= @agency %>
     </p>
     <br>
     <p>Thanks for using Mailcourier!</p>
