--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
 
 				<div class="form-group">
 					<label for="username" class="text-uppercase"><%= t("username") %></label>
-					<input type="text" class="form-control input-lg" id="user_username" name="user[username]" placeholder= <%= t("enter_username") %> >
+					<input type="text" class="form-control input-lg" id="user_username" name="user[username]" placeholder= <%= t("enter_username") %>) >
 				</div>
 
 				<div class="form-group">
