--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,38 +43,38 @@
 					      	<% if  user_signed_in? %>
 					      		<%if current_user.is_admin?%>
 					      		<li>
-						      		<a id="rates" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black">Rates</a>
+						      		<a id="rates" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black"><%= t("rates") %></a>
 									<ul class="dropdown-menu" role="menu" aria-labelledby="rates">
 										<li class="text-capitalize">
-											<%= link_to "Rates List", rate_index_path, class: 'text-capitalize' %> 
+											<%= link_to t("rates_list"), rate_index_path, class: 'text-capitalize' %> 
 										</li>
 										<li class="text-capitalize">
-											<%= link_to "Create Rates", new_rate_path, class: 'text-capitalize' %>
+											<%= link_to t("create_rates"), new_rate_path, class: 'text-capitalize' %>
 										</li>
 									</ul>
 					      		</li>
 
 					      		<li>
-					      			<a id="Operator" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black">Operator</a>
+					      			<a id="Operator" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black"><%= t("operator") %></a>
 									<ul class="dropdown-menu" role="menu" aria-labelledby="Operator">
 										<li class="text-capitalize">
-											<%= link_to "Operators List", users_admin_index_path, class: 'text-capitalize' %>
+											<%= link_to t("operators_list"), users_admin_index_path, class: 'text-capitalize' %>
 										</li>
 										<li class="text-capitalize">
-											<%= link_to "Add Operator", new_users_admin_path, class: 'text-capitalize' %>
+											<%= link_to (t("add") +" "+t("operator")), new_users_admin_path, class: 'text-capitalize' %>
 										</li>
 									</ul>
 					      		</li>
 					      		<%end%>
 					      		<li>
-					      			<a id="Packages" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black">Packages</a>
+					      			<a id="Packages" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black"><%= t("packages") %></a>
 									<ul class="dropdown-menu" role="menu" aria-labelledby="Packages">
 										<li class="text-capitalize">
-											<%= link_to(t('packages list'), package_index_path, class: 'text-capitalize')%>
+											<%= link_to(t('packages_list'), package_index_path, class: 'text-capitalize')%>
 										</li>
 					      				<%if !current_user.is_member?%>
 										<li class="text-capitalize">
-											<%= link_to(t('new_package'), new_package_path, class: 'text-capitalize')%> 
+											<%= link_to(t('new')+" "+t('package'), new_package_path, class: 'text-capitalize')%> 
 										</li>
 					      				<%end%>
 									</ul>
