--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,20 +7,20 @@
 			<% devise_flash %>
 			<%= f.hidden_field :reset_password_token %>
 			
-			<h2>Change your password</h2>
-
+			<h1 class="text-uppercase"><%=t('change_password')%></h1>
+			<br>
 			<div class="form-group">
-				<%= f.label :password, "New password", html:{ class: "text-uppercase" } %>
+				<%= f.label :password, t("new_password"), class: "text-uppercase"  %>
 			    <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control input-lg" %>
 			</div>
 
 			<div class="form-group">
-				<%= f.label :password_confirmation, "Confirm new password", html:{ class: "text-uppercase" } %>
+				<%= f.label :password_confirmation,  t("confirm_new_password"), class: "text-uppercase" %>
 				<%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg" %>
 			</div>
 
 			<div class="form-group">
-				<%= f.submit "Change my password", class: "no-radius btn btn-green btn-block btn-lg text-uppercase" %>
+				<%= f.submit t("change_password"), class: "no-radius btn btn-green btn-block btn-lg text-uppercase" %>
 			</div>
 		<% end %>
 
