--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,15 +5,15 @@
 		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "form-mail" }) do |f| %>
 			<% devise_flash %>
 
-			<h1>Forgot your password?</h1>
+			<h1><%=t('forgot_password')%></h1>
 			<br>
 			<div class="form-group">
-				<%= f.label :email, html:{ class: "text-uppercase" } %>
+				<%= f.label :email,t('email'),class: "text-uppercase" %>
 				<%= f.email_field :email, autofocus: true, class: "form-control input-lg" %>
 			</div>
 
 			<div class="form-group">
-				<%= f.submit "Send me reset password instructions" , class: "no-radius btn btn-green btn-block btn-lg text-uppercase"%>
+				<%= f.submit t('send_instructions') , class: "no-radius btn btn-green btn-block btn-lg text-uppercase"%>
 			</div>
 		<% end %>
 
