--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,10 +5,16 @@
 		<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: {class: "form-mail"}) do |f| %>
 		  <% devise_flash %>
 
-			<h1><%= t("edit") %> <%= resource_name.to_s.humanize %></h1>
+			<h1><%= t("edit_profile") %></h1>
+			<br>
 			<div class="form-group">
-				<%= f.label :email, class: "text-uppercase" %>
+				<%= f.label :email,t('email') ,class: "text-uppercase" %>
 				<%= f.email_field :email, autofocus: true, class: "form-control input-lg" %>
+			</div>
+
+			<div class="form-group">
+				<%= f.label :username,t('username') ,class: "text-uppercase" %>
+				<%= f.text_field :username, class: "form-control input-lg" %>
 			</div>
 
 			<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -18,18 +24,18 @@
 			<% end %>
 
 			<div class="form-group">
-				<%= f.label :password, class: "text-uppercase" %> <i>(<%= t("leave_blank_if_you_dont_want_to_change_it") %>)</i>
+				<%= f.label :password,t('password') ,class: "text-uppercase" %> <i>(<%= t("leave_blank_if_you_dont_want_to_change_it") %>)</i>
 				<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg"%>
 			</div>
 
 			<div class="form-group">
-				<%= f.label :password_confirmation , class: "text-uppercase"%>
+				<%= f.label :password_confirmation ,t('password_confirmation') ,class: "text-uppercase"%>
 				<%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg" %>
 			</div>
 
 			<div class="form-group">
-				<%= f.label :current_password %> <i>(<%= t("we_need_your_current_password_to_confirm_your_changes") %>)</i>
-				<%= f.password_field :current_password, autocomplete: "off", class: "form-control input-lg" %>
+				<%= f.label :current_password,t('current_password'), class: 'text-uppercase' %> <i>(<%= t("we_need_your_current_password_to_confirm_your_changes") %>)</i>
+				<%= f.password_field :current_password, autocomplete: "off",required: true, class: "form-control input-lg" %>
 			</div>
 
 			<div class="form-group">
