--- a/app/views/package/users/_operator.html.erb
+++ b/app/views/package/users/_operator.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-xs-12">
 			<ul class="list-unstyled list-inline title-separator">
 				<li class="align-middle"><%= image_tag "open-box.png" , class: "img-responsive img-sm", title: 'Ballicons (free) by Nick Frost is licensed under CC BY 3.0'%></li>
-				<li class="align-middle"><h3 class="no-margin"><%= t("packages") %></h3></li>
+				<li class="align-middle"><h3 class="no-margin text-capitalize"><%= t("packages") %></h3></li>
 			</ul>
 		</div>
 		<div class="col-xs-12 col-md-8">
@@ -16,7 +16,7 @@
 							<th class="text-capitalize"><%= t("status") %></th>
 							<th class="text-capitalize"><%= t("to") %></th>
 							<th class="text-capitalize"><%= t("from") %></th>
-							<th class="text-capitalize"><%= t("mask_as") %></th>
+							<th class="text-capitalize"><%= t("mark_as") %></th>
 							<th class="text-capitalize"><%= t("details") %></th>
 						</tr>
 					</thead>
@@ -30,12 +30,12 @@
 							<td><%= package.sender.username %></td>
 							<td>
 								<% if package.is_pending?%>
-								<%=link_to(t("arrived"), package_path(package, :status => 1), :method => :put, data: {confirm: "Are you sure you want to mark this package as Arrived?"}, class: 'btn btn-block btn-xs btn-black')%>
+								<%=link_to(t("arrived"), package_path(package, :status => 1), :method => :put, data: {confirm: "Are you sure you want to mark this package as Arrived?"}, class: 'btn btn-block btn-xs btn-black text-capitalize')%>
 								<%elsif package.is_arrived?%>
-								<%=link_to(t("delivered"), package_path(package, :status => 2), :method => :put, data: {confirm: "Are you sure you want to mark this package as Delivered?"}, class: 'btn btn-block btn-xs btn-green')%>
+								<%=link_to(t("delivered"), package_path(package, :status => 2), :method => :put, data: {confirm: "Are you sure you want to mark this package as Delivered?"}, class: 'text-capitalize btn btn-block btn-xs btn-green text-capitalize')%>
 								<%end%>
 							</td>
-							<td><%=link_to(t("view")+" "+t("details"), package_path(package))%></td>
+							<td><%=link_to(t("view")+" "+t("details"), package_path(package), class: 'text-capitalize')%></td>
 						</tr>
 						<% end %>
 					</tbody>
