--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,8 +82,12 @@
 					      	<li>
 						      	<a id="lang" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black text-uppercase"><%=I18n.locale%> <span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu" aria-labelledby="lang">
-									<li class="text-capitalize"><%= link_to(t('english'),lang_path(:locale => 'en'))%></li>
-									<li class="text-capitalize"><%= link_to(t('spanish'),lang_path(:locale => 'es'))%></li>
+									<li class="text-capitalize">
+										<%= link_to t('english'), :locale=>'en'%>
+									</li>
+									<li class="text-capitalize">
+										<%= link_to t('spanish'), :locale=>'es'%>
+									</li>
 								</ul>
 							</li>
 					      	<li>
@@ -98,8 +102,15 @@
 								</ul>
 							</li>
 					      	<%else%>
-						        <li class="text-uppercase"><a href="/users/sign_in"><%= t('login') %></a></li>
-						        <li class="text-uppercase"><a  href="/users/sign_up"><%= t('sign_up') %></a></li>
+						        <li class="text-uppercase">
+						        	<%= link_to(t('login'), new_user_session_path)%> 
+						        	<!-- <a href="/users/sign_in"><%= t('login') %></a> -->
+						        </li>
+						        <li class="text-uppercase">
+						        	<%= link_to(t('sign_up'), new_user_registration_path)%> 
+
+						        	<!-- <a  href="/users/sign_up"><%= t('sign_up') %></a> -->
+						        </li>
 						        <li>
 							      	<a id="lang" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black text-uppercase"><%=I18n.locale%> <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu" aria-labelledby="lang">
