--- a/app/views/package_mailer/arrived.html.erb
+++ b/app/views/package_mailer/arrived.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Dear <%= @username %>,</h1>
     <p>
-      Your <a href="<%=@url%>">package</a> has successfully reached  its destination to <%= @agency %>
+      Your package has successfully reached  its destination to <%= @agency %>
     </p>
     <br>
     <p>Thanks for using Mailcourier!</p>
